--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -93,10 +93,43 @@
   transition: fill 0.3s;
 }
 
-.product__like:hover path{
+.product__like:hover path {
   fill: #FF3465;
 }
 
 .product__availability {
   font-size: 12px;
+}
+
+.product__bar {
+  margin-top: 45px;
+}
+
+.product__bar-title {
+  display: inline-block;
+  padding-bottom: 7px;
+  border-bottom: 3px solid #000;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.product__line {
+  width: 100%;
+  height: 1px;
+  background-color: #c4c4c4;
+}
+
+.product__description-block {
+  max-width: 1000px;
+}
+
+.description__product-title {
+  padding: 14px 0 8px;
+  line-height: 130%;
+  color: #000;
+}
+
+.description__text {
+  line-height: 200%;
+  color: #3c3c3c;
 }
