--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -111,7 +111,7 @@
   flex-direction: column;
   align-items: flex-end;
   margin-top: 45px;
-  
+
   height: 100%;
 }
 
@@ -130,3 +130,9 @@
   font-weight: 400;
   line-height: 200%;
 }
+
+.cart__button-back {
+  margin-top: 20px;
+}
+
+.cart__button-text {}
