--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -36,6 +36,7 @@
   padding-right: 15px;
   font-size: 32px;
   line-height: 150%;
+  font-family: Rubik;
 }
 
 .user__image img {
@@ -72,11 +73,16 @@
   color: #000;
 }
 
+/* ==================================================== */
+
 .profile__information-block {
   flex: 1 1 auto;
-  display: flex;
+  display: none;
   flex-direction: column;
-  align-items: flex-start;
+}
+
+.profile__information-block:target {
+  display: flex;
 }
 
 .profile__information-block input {
@@ -110,4 +116,54 @@
   margin-bottom: 0px;
 }
 
-.profile__button-text {}
+/* ============================================= */
+
+.profile__orders-block {
+  flex: 1 1 auto;
+  display: none;
+  flex-direction: column;
+}
+
+.profile__orders-block:target {
+  display: flex;
+}
+
+.orders__order {
+  margin-bottom: 24px;
+}
+
+.order {
+  display: flex;
+  flex-direction: column;
+  max-width: 700px;
+  width: 100%;
+  transition: all 0.3s;
+}
+
+.order:hover {
+  transform: translateX(-10px);
+  color: #5A5CDB;
+}
+
+.order:hover .order__line {
+  background-color: #5A5CDB;
+}
+
+.order__link {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  margin-bottom: 8px;
+}
+
+.order__text {
+  line-height: 110%;
+}
+
+.order__line {
+  width: 100%;
+  height: 1px;
+  background-color: #828282;
+  transition: background-color 0.3s;
+}
