update(product.html, product.css): добавлено название магазина перед ценником

--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -73,6 +73,13 @@
   color: #D785A1;
 }
 
+.product__store {
+  font-family: Rubik;
+  
+  text-transform: uppercase;
+  color: #3c3c3c;
+}
+
 .product__price {
   font-weight: 700;
   font-size: 24px;
