--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -15,7 +15,7 @@ body {
   padding: 0 20px;
 }
 
-.login-container {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,14 +28,14 @@ body {
   border-radius: 20px;
 }
 
-.login-form__title {
+.form__title {
   flex: 0 0 100%;
   padding-bottom: 30px;
   font-size: 32px;
   font-weight: 700;
 }
 
-.login-form {
+.form {
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
@@ -43,43 +43,53 @@ body {
   width: 100%;
 }
 
-.login-form label {
+.form label {
   padding: 0 0 10px 10px;
 }
 
-.login-form input {
-  height: 30px;
+.form input {
+  height: 50px;
   padding: 5px 10px;
   border-radius: 10px;
   font-family: Rubik;
   font-size: 16px;
 }
 
-.login-form__login {
+.form__item {
   margin-bottom: 20px;
 }
 
-.login-form__password {
-  margin-bottom: 0;
+.form__item:last-of-type {
+  margin-bottom: 0px;
 }
 
-.login-form__button {
+.form__item[type=file] {
+  margin: 0;
+}
+
+.form__button {
   max-width: inherit;
   min-height: 50px;
   padding: 15px 0;
+  margin: 30px 0;
   text-align: center;
   background-color: #202020;
-  border-radius: 20px;
-  margin: 30px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 10px;
   transition: background-color 0.3s;
 }
 
-.login-form__button:hover {
+.form__button:is(:last-child) {
+  margin-bottom: 0;
+}
+
+.form__button:hover {
   background-color: #ececec;
   color: #202020;
 }
 
-.login-form__link {
+.form__link {
   margin: 0 auto;
   text-decoration: underline;
 }
