add(edit-profile.js, update-data.php): добавлены скрипты для динамического добавления и обновления информации о пользователе в разделе "Личная информация"; кнопки сохранения и редактирования меняют состояние при нажатии

--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,11 +1,21 @@
 .button {
   padding: 8px 0;
   background-color: #5A5CDB;
-  color: #F3F3F3;
+  color: #fff;
   font-family: Rubik;
   font-size: 18px;
   text-wrap: nowrap;
   transition: transform 0.3s;
+}
+
+.button--disabled {
+  background-color: #525252;
+  color: #bebdbd;
+}
+
+.button:is(.button--disabled):hover {
+  transform: none;
+  cursor: default;
 }
 
 .button--gray {
