--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -129,9 +129,11 @@ body {
 }
 
 .item-card {
+  display: flex;
   max-width: 377px;
   width: 100%;
-  height: 540px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .item-card__image {
@@ -158,12 +160,18 @@ body {
   font-size: 20px;
   padding-bottom: 8px;
   letter-spacing: 0.5px;
-  line-height: 120%;
 }
 
 .item-card__wrapper {
   display: flex;
+  height: 100%;
   transition: all 0.3s;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.item-card__body {
+  display: flex;
 }
 
 .item-card:hover .item-card__wrapper {
@@ -180,15 +188,15 @@ body {
 }
 
 .item-card__category {
-  display: inline-block;
-  font-size: 13px;
-  background-color: #5A5CDB;
-  color: #FFF;
+  margin: 10px auto 0 0;
   padding: 8px;
-  max-width: 100%;
   border-radius: 20px;
-  margin-top: 10px;
+  background-color: #FF3465;
+  color: #FFF;
+  font-family: Rubik;
+  font-size: 13px;
   text-align: center;
+  transition: background-color 0.3s;
 }
 
 .item-card__price {
@@ -210,7 +218,8 @@ body {
   transition: background-color 0.3s, opacity 0.2s ease-in;
 }
 
-.item-card__buy-block:hover {
+.item-card__buy-block:hover,
+.item-card__category:hover {
   background-color: #5A5CDB;
 }
 
