--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,6 +22,7 @@ body {
 
 .header__container {
   display: flex;
+  background-color: #FFF;
   align-items: center;
   padding: 32px 15px 17px;
   min-height: 136px;
