update(cart.php, addToCart.php): добавлена пустая корзина; при добавлении двух одинаковых товаров увеличивается их количество в корзине, а не копируется тот же товар; считается общая стоимость товаров в корзине

--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -124,6 +124,14 @@
   line-height: 200%;
 }
 
+.cart__items:not(:has(.cart__item)) button {
+  display: none;
+}
+
+.cart__items:not(:has(.cart__item)) .cart__button-back {
+  min-width: 258px;
+}
+
 .quantity__price {
   margin-bottom: 9px;
   line-height: 120%;
