update(cart.php, addToCart.php): добавлена логика изменения количества товара при нажатии на кнопки плюса и минуса; в корзине в количестве товаров теперь показывается общая сумма товаров, а не количество различных

--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -87,6 +87,10 @@
   align-items: center;
 }
 
+.quantity__symbol {
+  border-radius: 50%;
+}
+
 .quantity__symbol rect,
 .quantity__symbol circle {
   transition: all 0.3s;
