add(addOrder.php, pop-up.js): добавлен поп-ап при успешном оформлении заказа; добавлена возможность делать заказ с добавлением в базу данных

--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -58,6 +58,7 @@
 
 .order__link {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   transition: all 0.3s;
   padding: 5px;
@@ -66,6 +67,10 @@
 .order__link:hover {
   background-color: #ebe9e9;
   transform: translateX(20px);
+}
+
+.order__link:hover .order__item-quantity {
+  color: #5A5CDB;
 }
 
 .order__image {
@@ -80,11 +85,17 @@
   height: 200px;
 }
 
-.order__item-name {
-  flex: 1 1 30%;
+.order__item-info {
+  flex: 1 1 100%;
   margin-right: 20px;
   font-family: Rubik;
   font-weight: 500;
+}
+
+.order__item-quantity {
+  margin-top: 10px;
+  font-size: 20px;
+  transition: color 0.3s;
 }
 
 .order__item-price {
