--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -150,3 +150,56 @@
 .cart__button-back {
   margin-top: 20px;
 }
+
+.success__modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 0 20px;
+}
+
+.success__modal .overlay {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  opacity: 0.6;
+}
+
+.success__window {
+  z-index: 10;
+  display: flex;
+  position: relative;
+  width: 350px;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 0 10px 15px rgba(0,0,0,0.4);
+  background-color: #e2e2e2;
+}
+
+.success__text {
+  flex: 1 1 auto;
+  margin: auto;
+}
+
+.success__close {
+  width: 24px;
+  height: 24px;
+  margin-bottom: auto;
+  border-radius: 50%;
+  opacity: 0.7;
+  background-color: transparent;
+  transition: opacity 0.1s;
+}
+
+.success__exit:hover {
+  opacity: 1;
+}
