--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -4,6 +4,7 @@
   color: #fff;
   font-family: Rubik;
   font-size: 18px;
+  text-align: center;
   text-wrap: nowrap;
   transition: transform 0.3s;
 }
