--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -24,8 +24,8 @@ body {
   width: 100%;
   min-height: 100%;
   padding: 40px;
-  background: linear-gradient(0deg, rgba(33,34,122,1) 0%, rgba(91,33,221,1) 49%, rgba(152,0,240,1) 100%);
-  border-radius: 20px;
+  background: #8665EF;
+  border-radius: 8px;
 }
 
 .form__title {
