add(addProduct): добавлена страница создания нового продукта, пока что не доделана; фото подставляются динамически при выборе

--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -68,6 +68,10 @@
   max-height: 485px;
 }
 
+.product__buy-block {
+  flex: 1 1 auto;
+}
+
 .product__name {
   position: absolute;
   top: -5%;
@@ -78,7 +82,7 @@
   font-family: Rubik;
   font-weight: 500;
   font-size: 48px;
-} 
+}
 
 .product__name span {
   color: #D785A1;
@@ -86,7 +90,7 @@
 
 .product__store {
   font-family: Rubik;
-  
+
   text-transform: uppercase;
   color: #3c3c3c;
 }
@@ -157,4 +161,64 @@
 .description__text {
   line-height: 200%;
   color: #3c3c3c;
+}
+
+/* ======================DEFAULT PRODUCT=========================== */
+
+.input__file {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.product__image-block--default {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product__image-block--default:hover .product__image--default {
+  transform: scale(1.2);
+}
+
+.product__image--default {
+  width: 48px;
+  height: 48px;
+  opacity: 0.2;
+  transition: transform 0.3s;
+}
+
+#uploaded_photo {
+  display: none;
+}
+
+.product__form {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  gap: 15px;
+}
+
+.product__input {
+  width: 100%;
+  height: 33px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #cacaca;
+}
+
+.product__input,
+.product__textarea {
+  font-family: Rubik;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.product__textarea {
+  border: 1px solid #cacaca;
+  padding: 8px;
+  resize: none;
 }
