--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -203,7 +203,8 @@
   gap: 15px;
 }
 
-.product__input {
+.product__input,
+.product__category {
   width: 100%;
   height: 33px;
   padding-bottom: 8px;
@@ -211,7 +212,8 @@
 }
 
 .product__input,
-.product__textarea {
+.product__textarea,
+.product__category {
   font-family: Rubik;
   font-size: 16px;
   line-height: 150%;
