--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -12,7 +12,7 @@
 .profile__container {
   display: flex;
   justify-content: space-between;
-  padding: 48px 15px;
+  padding: 48px 15px 0;
 }
 
 .profile__user-block {
@@ -116,6 +116,7 @@
   max-width: 370px;
   width: 100%;
   margin-bottom: 20px;
+  line-height: 22px;
 }
 
 .profile__button:last-child {
