--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,7 +24,7 @@ body {
   display: flex;
   background-color: #FFF;
   align-items: center;
-  padding: 32px 15px 17px;
+  padding: 17px 15px;
   min-height: 136px;
 }
 
