update(signIn.php, defaultProduct.php, addProduct.php): при входе продавца в систему, в сессию записывается id его магазина; в добавление товара добавлено поле количества - при добавлении данные заносятся как в accounting, так и в products

--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -219,6 +219,15 @@
   line-height: 150%;
 }
 
+.product__row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.product__column {
+  max-width: 240px;
+}
+
 .product__textarea {
   border: 1px solid #cacaca;
   padding: 8px;
