--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -132,11 +132,11 @@
   display: flex;
 }
 
-.orders__order {
+.profile__orders__order {
   margin-bottom: 24px;
 }
 
-.order {
+.profile__order {
   display: flex;
   flex-direction: column;
   max-width: 700px;
@@ -144,16 +144,16 @@
   transition: all 0.3s;
 }
 
-.order:hover {
+.profile__order:hover {
   transform: translateX(-10px);
   color: #5A5CDB;
 }
 
-.order:hover .order__line {
+.profile__order:hover .order__line {
   background-color: #5A5CDB;
 }
 
-.order__link {
+.profile__order__link {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -161,11 +161,11 @@
   margin-bottom: 8px;
 }
 
-.order__text {
+.profile__order__text {
   line-height: 110%;
 }
 
-.order__line {
+.profile__order__line {
   width: 100%;
   height: 1px;
   background-color: #828282;
