add(index.php, header.php, products.php, profile.php): добавлена фавиконка и логотип в header; если товар отсутствует на складах, его больше нельзя добавить в корзину из products.php напрямую; в магазин добавлены кнопки добавления или удаления товара для продавца

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -235,6 +235,12 @@
   align-items: center;
 }
 
+.store__quantity {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .store__form {
   display: none;
   flex-direction: column;
