--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -44,6 +44,12 @@
   height: 100px;
   border-radius: 50%;
   object-fit: cover;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.user__image:hover img {
+  opacity: 0.5;
 }
 
 .user__bonus-card {
